[tool.poetry]
name = xrpwhales-bot
version = 0.1.0
description = 
authors = [Antonio tuemail@example.com]

[tool.poetry.dependencies]
python = ^3.13
requests = ^2.32.5
python-telegram-bot = 13.15
websocket-client = ^1.9.0

[build-system]
requires = [poetry-core=1.0.0]
build-backend = poetry.core.masonry.api
